# famfolioz

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py  setup_app.sh  start.bat  start.command  start.sh
.claude/: settings.local.json
cas_parser/: .gitignore  __init__.py  extractor.py  holdings_parser.py  isin_resolver.py  main.py  models.py  nps_models.py  nps_parser.py  section_detector.py  transactions_parser.py  unified_parser.py  validator.py
cas_parser/data/: amfi_schemes.json
cas_parser/tests/: __init__.py  test_extractor.py  test_holdings_parser.py  test_models.py  test_nps_parser.py  test_section_detector.py  test_transaction_validation.py  test_transactions_parser.py  test_validator.py  test_xirr.py
cas_parser/webapp/: app.py  auth.py  benchmarking.py  data.py  manage.py  xirr.py
cas_parser/webapp/db/: __init__.py  admin.py  auth.py  benchmarks.py  connection.py  folios.py  goals.py  holdings.py  import_engine.py  investors.py  manual_assets.py  mutual_funds.py  nav.py  nps.py  tax.py  transactions.py  validation.py
cas_parser/webapp/routes/: __init__.py  admin.py  auth.py  folios.py  goals.py  investors.py  manual_assets.py  mutual_funds.py  nps.py  pages.py  performance.py  transactions.py
cas_parser/webapp/templates/: _auth_nav.html  _feature_request_widget.html  backup.html  dashboard.html  folio.html  goals.html  index.html  investor.html  login.html  manual_assets.html  map_folios.html  mutual_funds.html  nps.html  nps_subscriber.html  resolve_conflicts.html  settings.html  setup.html  tax_harvesting.html  upload.html
